# srpt

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  install.ps1  install.sh  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.opencode/: context.md
.opencode/plans/: updates-upgrades-health-system.md
docs/: PARALLEL_INSTALLATION.md  PARALLEL_INSTALLATION_FINAL.md  PYTHON_VERSION_MANAGEMENT.md  README.md  STATUS_COMMAND.md  STATUS_QUICK_REF.md  STATUS_UPDATE.md
src/py/: __main__.py  audit.py  cache.py  health.py  install_workflow.py  installed.py  parallel_resolver.py  pypi.py  resolver.py  self_update.py  status.py  uninstall.py  update.py
src/py/utils/: confirm.py  pypi_client.py
src/srpt/: __main__.py  audit.py  cache.py  downloader.py  fetcher.py  health.py  install_workflow.py  installer_utils.py  metadata_cache.py  parallel_resolver.py  rebuild.py  resolver.py  self_update.py  status.py  uninstall.py  update.py
src/srpt/utils/: __init__.py  backup_manager.py  confirm.py  constraints.py
tests/: check_metadata_support.py  get_actual_urls.py  test_audit.py  test_health.py  test_pypi_simple.py  test_resolver.py  test_resolver_httpx.py  test_self_update.py
